# site

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  package-lock.json  tailwind.config.js
.github/workflows/: build_and_push.yml
docs/: index.html
docs/assets/dioxus/: joco-site.js  joco-site_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
public/: tailwind.css
src/: app.rs  main.rs
src/pages/: about.rs  home.rs
