[package]
name = "joco_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
tailwindcss-to-rust-macros = "0.1.3"

[target.'cfg(any(unix, windows))'.dependencies]
dioxus-desktop = "0.4.0"
# dioxus-tui = "0.2.2"

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = "0.4.0"
